style.css
@font-face{ 
	font-family: 'Aperture';
	src: url('din1451alt.eot');
	src: url('din1451alt.eot?#iefix') format('embedded-opentype'),
	     url('din1451alt.woff') format('woff'),
	     url('din1451alt.ttf') format('truetype'),
	     url('din1451alt.svg#din1451alt') format('svg');
}
html, body {
	height: 100%;
	width: 100%;
	padding: 0;
	margin: 0;
	background: url("images/debut_light.png") repeat;
	font-family: Tahoma;
	font-size: 11px;
}
a {
	color: #000;
}
a:hover {
	text-decoration: none;
}
#header {
	background: url("images/header_bg.jpg");
	/*width: 100%;*/
	height: 92px;
	min-width: 960px;
}
#header_left, #header_right {
	height: 92px;
}
#header_left {
	float: left;
	padding: 0px 0px 0px 32px;
	position: relative;
	min-width: 750px;
}
#header_right {
	float: right;
	display: table;
	margin-right: 45px;
}

#sitetitle {
	font-family: Arial;
	font-size: 24px;
	color: #4b4b4b;
	letter-spacing: -2px;
	float: left;
	position: relative;
	top: -4px;
}
#navigation {
	height: 29px;
	display: block;
	position: absolute;
	top: 50px;
	left: 23px;
}
#navigation a {
	font-family: Arial;
	font-size: 12px;
	font-weight: bold;
	color: #3d3d3d;
	text-decoration: none;
	display: inline-block;
}
.nav_icons {
    background: url("images/icon1.jpg");
    width: 29px;
    height: 29px;
    float: left;
    display: inline-block;
    margin: -7px 10px 0px 10px;
}
#coop_icon {
	background: url("images/icon2.jpg");
}
#ch_icon {
	background: url("images/icon3.jpg");
}
#lp_icon {
	background: url("images/icon4.jpg");
}
#wallofshame_icon {
	background: url("images/icon5.jpg");
}
#ss_icon {
	background: url("images/icon6.jpg");
}
#loginsteam {
	display: block;
	width: 154px;
	height: 23px;
	background: url("images/signsteam.png");
	float: left;
	margin: 15px 25px 0px 0px;
}
#userinfo {
	height: 49px;
	display:table-cell; 
	vertical-align:middle;
	/* shit will not work in IE */
}
#seper {
	height: 49px;
	width: 2px;
	background: #3096d1;
	float: left;
}
#edition {
	float: left;
	margin: 5px 0px 0px 15px;
	background: url(../images/cakeicon.png) no-repeat;
	background-size: cover;
	width: 40px;
	height: 40px;
}
.avatar {
	float: left;
	width: 32px;
	height: 32px;
	margin: 8px 15px 0px 5px;
}
#welcome {
	float: left;
	font-family: Tahoma, Arial;
	font-size: 11px;
	color: #424242;
	text-align: right;
	margin: 8px 10px 0px 15px;
}
.threelines {
	margin: 0px 10px 0px 15px !important;
}
#welcome .firstline {
	font-weight: bold;
}
.chamber {
	display: block;
	width: 264px;
	height: 339px;
	background: #f0f0f0;
	border-bottom: 2px solid #c3c3c3;
	float: left;
	margin: 10px 0px 10px 20px;
}
.chamber.leastportals {
	height: 149px;
}
.chamber.leastportals .chamberimage {
	border-bottom: 3px solid #3096d1;
}
.portalsused {
	text-align: center;
	margin-top: 55px;
	color: #e1e1e1;
	font-size: 20px;
	font-family: Arial;
	font-weight: bold;
	text-shadow: 0px 0px 3px #000000;
    filter: dropshadow(color=#000000, offx=0, offy=0);
}
.portalamount {
	display: inline-block;
	font-size: 34px;
	position: relative;
	top: 3px;
}
.chambers {
	margin: 30px 0px 0px 0px;
	float: left;
	clear: both;
}
.chamberinfo {
	width: 264px;
	height: 149px;
}
.chamberimage {
	border-top: 3px solid #3096d1;
	width: 264px;
	height: 149px;
}
.chambertitle {
	height: 34px;
	float: right;
}
.titlebg {
	background: url("images/chamber_title_bg.jpg");
	height: 26px;
	font-family: "Aperture";
	font-size: 16px;
	color: #565656;
	text-transform: capitalize;
	float: right;
	padding: 8px 10px 0px 6px;
}
.titlebg a {
	color: #565656;
	text-decoration: none;
}
.titlebg a:hover {
	text-decoration: underline;
}
.titlebghelper {
	background: url("images/titlebghelper.png");
	width: 20px;
	height: 34px;
	float: left;
}
.chamber_scores .firstplace {
	height: 37px;
	background: #dcdcdc;
	color: #3e3e3e;
	font-weight: bold;
}
.chamber_scores {
	width: 264px;
	font-family: Arial;
	font-size: 12px;
	text-transform: uppercase;
}
.chamber_scores .firstplace .entry .name {
	float: left;
	padding: 11px 0px 0px 17px;
}
.chamber_scores .firstplace .entry .score {
	float: right;
	padding: 11px 16px 0px 0px;
}
.chamber_scores .firstplace .entry {
	font-size: 12px;
	padding: 0px 0px 0px 0px;
}
.chamber_scores .entry {
	width: 264px;
	float: left;
	font-size: 11px;
	font-weight: bold;
	padding: 3px 0px 3px 0px;
}
.chamber_scores .entry .name {
	float: left;
	padding: 0px 0px 0px 15px;
}
.chamber_scores .entry .score {
	float: right;
	padding: 0px 17px 0px 0px;
}
.chamber_scores .othernoobscores {
	margin: 6px 0px 0px 0px;
	color: #3e3e3e;
}
.icons {
	width: 16px;
	height: 16px;
	display: block;
	float: right;
	margin: 0px 5px 0px 0px;
}
.youtube_icon {
	background: url("images/youtube_icon.png");
    cursor: pointer;
}
.steam_icon {
	background: url("images/steam_icon.png");
}
.chamber_icons {
	position: relative;
	top: 92px;
	left: -6px;
}
.chapternumber, .chaptername, h1, h2 {
	font-family: "Aperture";
	font-size: 20px;
	color: #3e88b3;
	text-transform: uppercase;
}
.chaptername {
	font-size: 40.5px;
	margin-top: -20px;
}
.chapterinfo {
	height: 45px;
	margin: 15px 0px 15px 20px;
	clear: both;
	float: left;
}
#wrapper {
	min-height: 100%;
	min-width: 1100px;
}
#content {
	overflow: hidden;
	float: left;
	padding-bottom: 56px;
	/* DIFFERENT IN CHANGELOG, NUCLEAR */
	min-width: 100%;

}
#footer {
	background: url("images/footerbg.jpg") repeat;
	margin-top: -56px;
	height: 56px;
	clear: both;
	font-family: Tahoma, Arial;
	font-size: 11px;
	color: #4c4c4c;
    padding: 0 20px;
}
#footer a {
    text-decoration: none;
}
#footer a:hover {
    text-decoration: underline;
}
.footerleft {
	float:left;
    margin-top: 16px;
}
.footeright {
	float: right;
    line-height: 56px;
}
#filters {
	width: 98%;
	height: 30px;
	background: green;
	margin: 30px auto;
	height: 96px;
	border: 1px solid #94bec8;
	background: #ededed;
	font-family: Tahoma, Arial;
	font-size: 11px;
	font-weight: bold;
	color: #4b4b4b;
}
#filter_instructions_lol {
	margin: 5px 0px 5px 10px;
}
input, label {
	display: block;
}
/* ... */

